--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,10 @@
     <string name="app_name">AndroidLabs</string>
     <string name="hello_message">Hello World!"</string>
     <string name="ButtonText">I\'m a button</string>
+    <string name="Login">Login</string>
+    <string name="LoginHint">Login Name"</string>
+    <string name="Password">Password</string>
+    <string name="PasswordHint">Enter Password</string>
+
 
 </resources>
